Prevent comment form submit button distortion on iOS (#592)
Forgot about that one the last time :-)

--- a/static/css/_article.scss
+++ b/static/css/_article.scss
@@ -274,6 +274,7 @@ main .article-meta {
     // New comment form
     > form input[type="submit"] {
       font-size: 1em;
+      -webkit-appearance: none;
     }
 
     // Respond & delete comment buttons
